--- a/index.html
+++ b/index.html
@@ -1,64 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Azuero Busca - Compra y Venta en Azuero</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Azuero Busca - Compra y Venta</title>
     <style>
-        body { 
-            font-family: Arial, sans-serif; 
-            background-color: #f0f8ff; 
-            padding: 20px; 
-            color: #333; 
-        }
-        header { 
-            background-color: #0074cc; 
-            color: white; 
-            padding: 15px; 
-            text-align: center; 
-            font-size: 24px; 
-            font-weight: bold;
-        }
-        .destacado { 
-            background-color: #ffcc00; 
-            padding: 10px; 
-            border: 2px solid #ff8800; 
-            margin: 15px 0; 
-            text-align: center; 
-            font-size: 18px;
-        }
-        .clima { 
-            background-color: #e6f7ff; 
-            padding: 10px; 
-            margin: 15px 0; 
-            border: 1px solid #0074cc; 
-        }
-        .anuncio { 
-            border: 1px solid #ccc; 
-            padding: 10px; 
-            margin: 5px 0; 
-            background-color: #fff; 
-        }
-        form input, form textarea { 
-            width: 100%; 
-            margin: 5px 0; 
-            padding: 8px; 
-        }
-        form button { 
-            padding: 10px 20px; 
-            background-color: #007bff; 
-            color: white; 
-            border: none; 
-            cursor: pointer; 
-        }
-        form button:hover { 
-            background-color: #0056b3; 
-        }
+        body { font-family: Arial, sans-serif; background-color: #f8f9fa; padding: 20px; color: #333; margin: 0; }
+        header { background-color: #0074cc; color: white; padding: 15px; text-align: left; font-size: 24px; font-weight: bold; display: flex; align-items: center; }
+        header img { height: 50px; margin-right: 15px; }
+        .banner-clima { background-color: #e6f7ff; text-align: center; padding: 10px; font-size: 18px; }
+        .destacado { background-color: #ffcc00; padding: 15px; text-align: center; font-size: 20px; font-weight: bold; animation: blink 1.5s infinite alternate; }
+        .anuncio { border: 1px solid #ccc; padding: 10px; margin: 10px 0; background-color: white; }
+        form input, form textarea { width: 100%; margin: 5px 0; padding: 8px; }
+        form button { padding: 10px 20px; background-color: #007bff; color: white; border: none; cursor: pointer; }
+        form button:hover { background-color: #0056b3; }
+        .anuncio img { width: 100%; max-height: 200px; object-fit: cover; margin-top: 10px; }
+        .mapa { width: 100%; height: 200px; margin-top: 10px; }
+        @keyframes blink { 0% { opacity: 1; } 100% { opacity: 0.7; } }
     </style>
     <script type="module" src="script.js"></script>
 </head>
 <body>
-    <header>Azuero Busca - Compra, Venta y Anuncios Varios</header>
+    <header>
+        <img src="azuero_busca_logo.png" alt="Azuero Busca Logo">
+        Azuero Busca - Compra, Venta y Servicios
+    </header>
 
-    <div class="clima">
+    <div class="banner-clima">
         <h3>Clima en Azuero</h3>
         <p id="clima-info">Cargando clima...</p>
     </div>
@@ -73,6 +41,9 @@
         <input type="text" id="titulo" placeholder="Título del anuncio" required>
         <textarea id="descripcion" placeholder="Descripción" required></textarea>
         <input type="text" id="contacto" placeholder="Contacto (Teléfono o WhatsApp)" required>
+        <input type="url" id="instagram" placeholder="Link de Instagram (opcional)">
+        <input type="url" id="facebook" placeholder="Link de Facebook (opcional)">
+        <input type="text" id="direccion" placeholder="Dirección o Ubicación">
         <button type="submit">Publicar Anuncio</button>
     </form>
 
