--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Azuero Busca - Compra y Venta</title>
+    <title>ConectAzuero - Compra, Venta y Servicios</title>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -20,101 +21,124 @@
             font-size: 24px;
             font-weight: bold;
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             align-items: center;
-            text-align: center;
-        }
-        .contenedor {
-            width: 90%;
-            max-width: 800px;
-            margin: auto;
-            padding: 20px;
-        }
-        .anuncio {
-            background-color: rgba(255, 255, 255, 0.9);
-            color: #333;
-            padding: 15px;
-            margin: 20px auto;
-            border-radius: 10px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-            text-align: left;
-        }
-        .galeria img {
-            width: 100%;
-            max-height: 300px;
-            object-fit: cover;
-            border-radius: 10px;
-        }
-        input, textarea, button {
-            width: 100%;
-            margin: 10px 0;
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-        }
-        button {
-            background-color: #ffcc00;
-            color: #333;
-            font-size: 18px;
-            cursor: pointer;
-            transition: background 0.3s;
-        }
-        button:hover {
-            background-color: #ffaa00;
+            padding-left: 20px;
+            padding-right: 20px;
         }
         .boton {
-            display: inline-block;
-            margin-top: 10px;
-            padding: 10px 20px;
-            background-color: #0074cc;
-            color: white;
-            font-size: 16px;
+            padding: 10px 15px;
+            background-color: #ffcc00;
+            color: black;
             text-decoration: none;
             border-radius: 5px;
-            transition: background 0.3s;
+            cursor: pointer;
         }
         .boton:hover {
-            background-color: #0056b3;
-        }
-        @media (max-width: 600px) {
-            header {
-                font-size: 20px;
-                padding: 15px;
-            }
-            .contenedor {
-                width: 95%;
-            }
+            background-color: #ffaa00;
         }
     </style>
 </head>
 <body>
-    <header>Azuero Busca - Compra, Venta y Servicios</header>
+    <header>
+        <span>ConectAzuero - Compra, Venta y Servicios</span>
+        <div id="auth-buttons">
+            <button class="boton" onclick="login()">Iniciar Sesión con Google</button>
+            <button class="boton" onclick="logout()" style="display:none;">Cerrar Sesión</button>
+        </div>
+    </header>
 
-    <div class="contenedor">
-        <h2>📢 Publica tu Anuncio</h2>
-        <form>
-            <input type="text" placeholder="Título del anuncio" required>
-            <textarea placeholder="Descripción" required></textarea>
-            <input type="text" placeholder="Contacto (Teléfono o WhatsApp)" required>
-            <input type="url" placeholder="Link de Instagram (opcional)">
-            <input type="url" placeholder="Link de Facebook (opcional)">
-            <input type="file" accept="image/*">
+    <h2>📌 Bienvenido a ConectAzuero</h2>
+
+    <div id="admin-section" style="display:none;">
+        <h3>Panel de Administrador</h3>
+        <p>Aquí puedes gestionar anuncios.</p>
+    </div>
+
+    <div id="publicar-anuncio" style="display:none;">
+        <h3>Publicar un Anuncio</h3>
+        <form onsubmit="publicarAnuncio(event)">
+            <input type="text" id="titulo" placeholder="Título del anuncio" required>
+            <textarea id="descripcion" placeholder="Descripción" required></textarea>
+            <input type="text" id="precio" placeholder="Precio" required>
+            <input type="text" id="ubicacion" placeholder="Ubicación" required>
+            <input type="text" id="contacto" placeholder="Contacto (Teléfono o WhatsApp)" required>
             <button type="submit">Publicar Anuncio</button>
         </form>
-
-        <h2>📌 Anuncios Recientes</h2>
-        <div class="anuncio">
-            <h3>Vendo Moto Scooter Yamaha</h3>
-            <div class="galeria">
-                <img src="https://via.placeholder.com/600x300.png?text=Moto+Scooter+Yamaha" alt="Moto Scooter en venta">
-            </div>
-            <p>Scooter Yamaha en excelente estado. Poco uso y bien mantenida. Lista para rodar.</p>
-            <p><strong>Precio:</strong> $1,500</p>
-            <p><strong>Ubicación:</strong> Chitré, Herrera</p>
-            <p><strong>Contacto:</strong> 📞 6000-5678</p>
-            <a href="https://instagram.com/motos_herrera" class="boton" target="_blank">📷 Instagram</a>
-            <a href="https://facebook.com/motos_herrera" class="boton" target="_blank">📘 Facebook</a>
-        </div>
     </div>
+
+    <script>
+        const firebaseConfig = {
+            apiKey: "TU_API_KEY",
+            authDomain: "TU_AUTH_DOMAIN",
+            projectId: "TU_PROJECT_ID",
+            storageBucket: "TU_STORAGE_BUCKET",
+            messagingSenderId: "TU_MESSAGING_SENDER_ID",
+            appId: "TU_APP_ID"
+        };
+
+        const app = firebase.initializeApp(firebaseConfig);
+        const auth = firebase.auth();
+
+        const adminEmail = "tuemail@gmail.com"; // SOLO ESTE USUARIO SERÁ ADMIN
+
+        function login() {
+            const provider = new firebase.auth.GoogleAuthProvider();
+            auth.signInWithPopup(provider).then(result => {
+                verificarUsuario(result.user);
+            }).catch(error => {
+                console.error("Error en autenticación", error);
+            });
+        }
+
+        function logout() {
+            auth.signOut().then(() => {
+                document.getElementById("admin-section").style.display = "none";
+                document.getElementById("publicar-anuncio").style.display = "none";
+                document.querySelector("button[onclick='logout()']").style.display = "none";
+                document.querySelector("button[onclick='login()']").style.display = "inline-block";
+            });
+        }
+
+        function verificarUsuario(user) {
+            if (!user.emailVerified) {
+                alert("Tu cuenta de Google no está verificada. Verifícala antes de publicar anuncios.");
+                logout();
+                return;
+            }
+
+            if (user.email === adminEmail) {
+                document.getElementById("admin-section").style.display = "block";
+            }
+            
+            document.getElementById("publicar-anuncio").style.display = "block";
+            document.querySelector("button[onclick='logout()']").style.display = "inline-block";
+            document.querySelector("button[onclick='login()']").style.display = "none";
+        }
+
+        auth.onAuthStateChanged(user => {
+            if (user) {
+                verificarUsuario(user);
+            }
+        });
+
+        function publicarAnuncio(event) {
+            event.preventDefault();
+            let titulo = document.getElementById("titulo").value;
+            let descripcion = document.getElementById("descripcion").value;
+            let precio = document.getElementById("precio").value;
+            let ubicacion = document.getElementById("ubicacion").value;
+            let contacto = document.getElementById("contacto").value;
+
+            let nuevoAnuncio = { titulo, descripcion, precio, ubicacion, contacto };
+
+            let anuncios = JSON.parse(localStorage.getItem("anuncios")) || [];
+            anuncios.push(nuevoAnuncio);
+            localStorage.setItem("anuncios", JSON.stringify(anuncios));
+
+            alert("Anuncio publicado con éxito.");
+            location.reload();
+        }
+    </script>
 </body>
 </html>
